[gd_scene load_steps=17 format=2]

[ext_resource path="res://Assets/l1_sprite_mainui1-19201080.png" type="Texture" id=1]
[ext_resource path="res://Assets/Fonts/ThaleahFat_35.tres" type="DynamicFont" id=2]
[ext_resource path="res://DungeonCrawler/UI/MenuPage/PlayLevelButton.tscn" type="PackedScene" id=3]
[ext_resource path="res://DungeonCrawler/UI/MenuPage/LeaderboardButton.tscn" type="PackedScene" id=4]
[ext_resource path="res://DungeonCrawler/UI/MenuPage/SettingButton.tscn" type="PackedScene" id=5]
[ext_resource path="res://DungeonCrawler/UI/MenuPage/MainMenu.gd" type="Script" id=6]
[ext_resource path="res://DungeonCrawler/UI/Animation/FadeIn.tscn" type="PackedScene" id=7]
[ext_resource path="res://Assets/Fonts/Montserrat-ExtraBold_4.tres" type="DynamicFont" id=8]
[ext_resource path="res://Assets/l0_sprite_mainui1-19201080.png" type="Texture" id=9]
[ext_resource path="res://Assets/ui/info_button.png" type="Texture" id=10]
[ext_resource path="res://Assets/ui/info_button_pressed.png" type="Texture" id=11]
[ext_resource path="res://DungeonCrawler/UI/Tutorial/PopupTutorial.tscn" type="PackedScene" id=12]
[ext_resource path="res://Assets/ui/close_button.png" type="Texture" id=13]
[ext_resource path="res://Assets/ui/close_button_pressed.png" type="Texture" id=14]
[ext_resource path="res://DungeonCrawler/UI/MenuPage/LogoutConfirmation.tscn" type="PackedScene" id=15]

[sub_resource type="GDScript" id=1]
script/source = "extends ParallaxBackground


# Declare member variables here. Examples:
# var a = 2
# var b = \"text\"
export (float) var scrolling_speed = 500.0

# Called every frame. 'delta' is the elapsed time since the previous frame.
func _process(delta):
	scroll_offset.x += scrolling_speed + delta
"

[node name="MainMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]
script = SubResource( 1 )
scrolling_speed = 1.0

[node name="ParallaxLayer" type="ParallaxLayer" parent="ParallaxBackground"]
motion_mirroring = Vector2( 255, 0 )

[node name="Sprite" type="Sprite" parent="ParallaxBackground/ParallaxLayer"]
position = Vector2( 128.227, 71.0345 )
scale = Vector2( 0.133, 0.133 )
texture = ExtResource( 9 )

[node name="Background" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource( 1 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LogoContainer" type="CenterContainer" parent="Background"]
margin_left = 23.0
margin_top = 15.0
margin_right = 233.0
margin_bottom = 50.0
rect_min_size = Vector2( 210, 35 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Background/LogoContainer"]
margin_right = 210.0
margin_bottom = 35.0
rect_min_size = Vector2( 210, 35 )
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 0.152941, 0.152941, 0.133333, 1 )
custom_colors/font_color_shadow = Color( 0.803922, 0.898039, 0.556863, 1 )
custom_constants/shadow_offset_x = 1
custom_constants/shadow_offset_y = 1
text = "GET-THAT-TREE"
align = 1
valign = 1
uppercase = true

[node name="ButtonContainer" type="VBoxContainer" parent="."]
margin_left = 83.0
margin_top = 60.0
margin_right = -83.0
margin_bottom = 108.0
rect_min_size = Vector2( 90, 50 )
custom_constants/separation = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlayLevelButton" parent="ButtonContainer" instance=ExtResource( 3 )]
scene_to_load = "res://DungeonCrawler/UI/LevelSelection/LevelSelection.tscn"

[node name="LeaderboardButton" parent="ButtonContainer" instance=ExtResource( 4 )]
margin_top = 18.0
margin_bottom = 33.0
scene_to_load = "res://DungeonCrawler/UI/Leaderboard/Leaderboard.tscn"

[node name="SettingButton" parent="ButtonContainer" instance=ExtResource( 5 )]
margin_top = 36.0
margin_bottom = 51.0
scene_to_load = "res://DungeonCrawler/UI/Settings/Settings.tscn"

[node name="Label" type="Label" parent="."]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -33.0
margin_top = -23.0
margin_right = -4.0
margin_bottom = -1.99997
custom_fonts/font = ExtResource( 8 )
text = "Version 1.0 
CZ3003 MVPs
"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LogoutButton" type="TextureButton" parent="."]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 235.0
margin_top = -139.0
margin_right = 250.0
margin_bottom = -124.0
rect_min_size = Vector2( 15, 15 )
size_flags_horizontal = 3
size_flags_vertical = 3
texture_normal = ExtResource( 13 )
texture_pressed = ExtResource( 14 )
expand = true
stretch_mode = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TutorialButton" type="TextureButton" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -46.0
margin_top = 5.0
margin_right = -16.0
margin_bottom = 20.0
rect_min_size = Vector2( 15, 15 )
rect_scale = Vector2( 0.993599, 1 )
size_flags_horizontal = 3
size_flags_vertical = 3
texture_normal = ExtResource( 10 )
texture_pressed = ExtResource( 11 )
expand = true
stretch_mode = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TutorialPopup" parent="." instance=ExtResource( 12 )]
visible = false

[node name="LogoutConfirmation" parent="." instance=ExtResource( 15 )]
visible = false

[node name="FadeIn" parent="." instance=ExtResource( 7 )]
visible = false

[connection signal="pressed" from="LogoutButton" to="." method="_on_LogoutButton_pressed"]
[connection signal="pressed" from="TutorialButton" to="." method="_on_TutorialButton_pressed"]
[connection signal="fade_finished" from="FadeIn" to="." method="_on_FadeIn_fade_finished"]
